[package]
name = "escrow_contract"
version = "0.1.0"
edition = "2021"      # Rust edition
publish = false       # Prevent publishing to crates.io

[lib]
crate-type = ["cdylib"] # Build as a dynamic library

[dependencies]
soroban-sdk = "21.7.7" # Soroban smart contract SDK

[dev-dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils"] } # Testing utilities

[profile.release]
opt-level = "z"          # Optimize for size
overflow-checks = true   # Enable overflow checks
debug = false            # Disable debug info
panic = "abort"          # Abort on panic
lto = true               # Link Time Optimization
codegen-units = 1        # Better optimization

[profile.release-with-logs]
inherits = "release"     # Inherit release settings
debug-assertions = true  # Enable debug assertions
